--- a/src/WebMaker.DbMigrator/appsettings.json
+++ b/src/WebMaker.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=WebMaker;Trusted_Connection=True;TrustServerCertificate=true"
+    "Default": "Server=127.0.0.1,1433;Database=YourDbName;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=True"
   },
   "OpenIddict": {
     "Applications": {
