--- a/src/WebMaker.HttpApi.Host/appsettings.json
+++ b/src/WebMaker.HttpApi.Host/appsettings.json
@@ -8,7 +8,7 @@
     "HealthCheckUrl": "/health-status"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=WebMaker;Trusted_Connection=True;TrustServerCertificate=true"
+    "Default": "Server=127.0.0.1,1433;Database=YourDbName;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=True"
   },
   "AuthServer": {
     "Authority": "https://localhost:44328",
