--- a/src/WebMaker.HttpApi.Host/appsettings.json
+++ b/src/WebMaker.HttpApi.Host/appsettings.json
@@ -5,7 +5,8 @@
     "CorsOrigins": "https://*.WebMaker.com,http://localhost:4200",
     "RedirectAllowedUrls": "http://localhost:4200",
     "DisablePII": false,
-    "HealthCheckUrl": "/health-status"
+    "HealthCheckUrl": "/health-status",
+    "ShowExceptionDetails": true
   },
   "ConnectionStrings": {
     "Default": "Server=127.0.0.1,1433;Database=YourDbName;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=True"
