--- a/src/WebMaker.EntityFrameworkCore/WebMaker.EntityFrameworkCore.csproj
+++ b/src/WebMaker.EntityFrameworkCore/WebMaker.EntityFrameworkCore.csproj
@@ -35,4 +35,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\Articles\" />
+  </ItemGroup>
+
 </Project>
